[package]
name = "noscript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bayespam = "1.1.0"
csv = "1.3.0"
js-sys = "0.3.64"
serde = "1.0.193"
serde_json = "1.0.109"
unicode-segmentation = "1.10.1"
wasm-bindgen = "0.2.87"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "read"
path = "src/read.rs"

[profile.release]
lto = true
opt-level = "z"
