[package]
name = "deploy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nostr-sdk = "0.26.0"
tokio = { version = "1", features = ["full"] }
serde = {version =  "1.0.193", features = ["derive"]}
serde_derive = "1.0.194"
serde_json = "1.0.109"
base64 = "0.21.5"
config = "0.13.4"

[[bin]]
name = "deploy"
path = "src/deploy.rs"

[[bin]]
name = "send"
path = "src/send_test_data.rs"
