[package]
name = "script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
#wasm-bindgen-futures = "0.4.39"
#web-sys = {version = "0.3.66", features = ["console"]}
whatlang = "0.16.4"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"
