[package]
name = "script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.64"
once_cell = "1.19.0"
serde-wasm-bindgen = "0.6.3"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.40"
#web-sys = {version = "0.3.66", features = ["console"]}
bayes = {path = "../bayes"}
types = {path = "../types"}

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"
