[package]
name = "train"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
serde = {version =  "1.0.193", features = ["derive"]}
serde_json = "1.0.111"
unicode-segmentation = "1.10.1"
types = { path = "../types"}
bayes = { path = "../bayes"}

[profile.release]
lto = true
opt-level = "z"
